# SpriteRigger

./: .gitmodules  .sprig  CMakeLists.txt  CMakePresets.json  MyFile.exten  README.md  Readme.md  SpriteRigger.recent  imgui.ini  imgui_example.cpp  recent.sprig
Application/src/: Application.cpp  Application.h  application.cpp  application.h  common.h
Application/src/BinaryIO/: binaryIO.h
Application/src/ECS/: Entity.h  entity.h  registry.cpp  registry.h
Application/src/FPS/: FPS.cpp  fps.h
Application/src/Input/: Input.cpp  Input.h  Keyboard.cpp  Keyboard.h  KeyboardEvent.h  Mouse.cpp  Mouse.h  input.cpp  input.h  mouse.cpp  mouse.h
Application/src/Mouse/: mouse.h
Application/src/NativeFileDialog/: dialog.h
Application/src/Render/Camera/: OrthographicCamera.cpp  OrthographicCamera.h
Application/src/Render/Mesh/: Mesh.cpp  Mesh.h
Application/src/Render/Model/: Common.h  ElementBuffer.cpp  ElementBuffer.h  InstancedMesh.cpp  InstancedMesh.h  Mesh.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Application/src/Render/Shader/: Shader.cpp  Shader.h
Application/src/Scene/: Scene.h  scene.h
Application/src/Serializer/: serializer.h
Application/src/StateSerializer/: StateSerializer.cpp  StateSerializer.h  stateSerializer.cpp  stateSerializer.h
Application/src/Vec/: vec.h
Application/src/Viewport/: Viewport.cpp  Viewport.h  viewport.cpp  viewport.h
GLSL/: Miyagi's_fence.glsl  TODO.md  circle-smoothstep.glsl  circle.glsl  easingFunctions.glsl  rectangle.glsl  triangle.glsl
Project/: Akari.sprig  project.spriterigger
assets/model/: bone.fbx
projects/: Akari.sprig  Test.sprig  Watanabe.sprig  project.sprig
src/: App.cpp  App.h  BannerImage.h  Main.cpp  Start.cpp  Start.h  State.cpp  State.h  Utility.cpp  Utility.h  app.cpp  app.h  bannerImage.h  main.cpp  project.cpp  project.h  spriteRigger.cpp  spriteRigger.h  start.cpp  start.h  utility.cpp  utility.h
src/Animate/: Animation.h  Once.h  System.cpp  System.h  Timeline.cpp  Timeline.h
src/Application/: Components.h  Rigger.h  application.cpp  application.h
src/Application/Components/: Hierarchy.h  Render.h  Transform.h
src/Application/ECS/: entity.h  registry.cpp  registry.h
src/Application/FPS/: fps.cpp
src/Application/FPSManager/: fpsManager.cpp  fpsManager.h
src/Application/FrameRate/: frame_rate.h
src/Application/TextManager/: textManager.cpp  textManager.h
src/Asset/: Asset.cpp  Asset.h
src/Assets/: Assets.cpp  Assets.h  BannerImage.h  assets.cpp
src/Assets/Shaders/: bone.frag  bone.geom  bone.vert  joint.frag  joint.vert
src/Bone/: Bone.h
src/Button/: button.cpp  button.h
src/Camera/: OrthographicCamera.cpp  OrthographicCamera.h
src/Camera/Components/: Grid.cpp  Grid.h
src/Component/: Component.h  components.h
src/Components/: ContextMenu.h  Hierarchy.h
src/Controller/: Controller.cpp  Controller.h  armatureController.cpp  armatureController.h  boneController.cpp  boneController.h
src/ECS/: Entity.h  Registry.cpp  Registry.h  System.h  Utility.h
src/ECS2/: Entity.h  Registry.cpp  Registry.h  System.h  Utility.h
src/Entity/: components.h
src/FPSManager/: FPSManager.cpp  FPSManager.h
src/Font/: font.cpp  font.h
src/FrameRate/: frame_rate.cpp
src/Layers/: AssetLayer.cpp  AssetLayer.h  HierarchyLayer.cpp  HierarchyLayer.h  InitializeLayer.cpp  InitializeLayer.h  SerializableLayer.h  ViewportLayer.cpp  ViewportLayer.h
src/MainMenu/: mainMenu.cpp  mainMenu.h
src/Manager/: ResourceManager.cpp  ResourceManager.h  armatureManager.cpp  armatureManager.h
src/Manager/AssetManager/: AssetManager.cpp  AssetManager.h
src/Manager/ProjectManager/: ProjectManager.cpp  ProjectManager.h
src/Manager/ShaderManager/: ShaderManager.cpp  ShaderManager.h  ShaderProgram.cpp  ShaderProgram.h
src/Manager/SystemManager/: SystemManager.cpp  SystemManager.h
src/MouseEventHandler/: mouse_event_handler.cpp  mouse_event_handler.h
src/Pressable/: pressable.cpp  pressable.h
src/Project/: Project.cpp  Project.h  project.cpp  project.h
src/ProjectManager/: projectManager.cpp  projectManager.h
src/Render/: render.cpp  render.h
src/Render/Mesh/: Mesh.cpp  Mesh.h
src/Render/Shader/: Shader.h
src/Scene/: AnimatorViewport.cpp  AnimatorViewport.h  AssetScene.cpp  AssetScene.h  AssetsScene.cpp  AssetsScene.h  HeaderPanelScene.cpp  HeaderPanelScene.h  HierarchyScene.cpp  HierarchyScene.h
src/Scene/AnimatorViewport/: animatorViewport.cpp  animatorViewport.h
src/Scene/AssetsScene/: assetsScene.cpp  assetsScene.h
src/Scene/ExplorerScene/: explorerScene.cpp  explorerScene.h
src/Scene/HeaderPanelScene/: headerPanelScene.cpp  headerPanelScene.h
src/Scene/HierarchyScene/: hierarchyScene.cpp  hierarchyScene.h
src/Scene/ToolsScene/: toolsScene.cpp  toolsScene.h
src/Serializer/: Serializer.cpp  Serializer.h
src/ServiceLocator/: ServiceLocator.h
src/Shader/: Shader.cpp  Shader.h  fragment.glsl  vertex.glsl
src/ShaderManager/: ShaderManager.cpp  ShaderManager.h  ShaderProgram.cpp  ShaderProgram.h
src/ShadowFrame/: shadowFrame.cpp  shadowFrame.h  shadow_frame.cpp  shadow_frame.h
src/SpriteRigger/: spriteRigger.cpp  spriteRigger.h
src/SpriteRigger/MainMenu/: mainMenu.cpp  mainMenu.h
src/SpriteRigger/NativeFileSystemDialog/: nativeFileSystemDialog.h
src/SpriteSkel/: spriteSkel.cpp  spriteSkel.h
src/SpriteSkel/MainMenu/: mainMenu.cpp
src/System/: CameraSystem.cpp  CameraSystem.h  ColorSystem.cpp  ColorSystem.h  RenderSystem.cpp  RenderSystem.h  SystemManager.cpp  SystemManager.h  TransformSystem.cpp  TransformSystem.h  armatureSystem.cpp  armatureSystem.h
src/Systems/: BoneInteractionSystem.h  BoneRenderSystem.h  ColorInterpolationSystem.h  Common.h  DragSystem.h  HoverSystem.h  JointInteractionSystem.h  JointRenderSystem.h  SelectSystem.h
src/Systems/Animation/: AnimationTimelineSystem.h  ValueAnimationSystem.h
src/Text/: text.cpp  text.h
src/Window/: Input.h  Layer.h  ShortcutManager.h  Window.cpp  Window.h  window.cpp  window.h
tests/: ecs.cpp
